GNOME Bugzilla – Bug 742771
[PATCH] Properly ignore BadWindow and BadDrawable in get_child_info_handler()
Last modified: 2015-01-11 20:25:24 UTC
Created attachment 294297 [details] [review] Patch gdkasync.c 479 if (rep->generic.type == X_Error) { state->child_has_error = TRUE; if (rep->error.errorCode != BadDrawable || < ---- rep->error.errorCode != BadWindow) { state->have_error = TRUE; result = False; } } This condition is always true. I Think should be if (rep->error.errorCode != BadDrawable && rep->error.errorCode != BadWindow)
Might be related to https://bugzilla.gnome.org/show_bug.cgi?id=322867 https://bugzilla.gnome.org/show_bug.cgi?id=600891 https://bugzilla.gnome.org/show_bug.cgi?id=691669 https://bugzilla.gnome.org/show_bug.cgi?id=708447 and others...