Properly ignore BadWindow and BadDrawable in get_child_info_handler()

Signed-off-by: Maks Naumov <maksqwe1@ukr.net>

https://bugzilla.gnome.org/show_bug.cgi?id=742771