gdk/x11/gdkasync.c
@@ -476,7 +476,7 @@ get_child_info_handler (Display *dpy,
   if (rep->generic.type == X_Error)
     {
       state->child_has_error = TRUE;
-      if (rep->error.errorCode != BadDrawable ||
+      if (rep->error.errorCode != BadDrawable &&
 	  rep->error.errorCode != BadWindow)
 	{
 	  state->have_error = TRUE;
